--- a/index.html
+++ b/index.html
@@ -10,14 +10,22 @@
     <script src="https://unpkg.com/vue@next"></script>
     <div id="app"></div>
     <script>
-        const vm = Vue.createApp({
-            data(){
-                return {
-                    text:"hola"
-                };
-            },
-            template: `<div v-text="text" ></div>`
-        }).mout("#app");
+ const app = Vue.createApp({
+     data() {
+         return {
+             text: '666'
+         }
+     },
+     methods:{
+        input(e){
+            this.text =e.target.value;
+        }
+     },
+     template: `<h2>{{ text }}</h2>
+      <input type="text" v-on:input="input" />
+     `
+ })
+ app.mount("#app")
     </script>
 </body>
 </html>
