--- a/index.html
+++ b/index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <script src="https://unpkg.com/vue@next"></script>
     <div id="app"></div>
     <script>
- const app = Vue.createApp({
-     data() {
-         return {
-             text: '666'
-         }
-     },
-     methods:{
-        input(e){
-            this.text =e.target.value;
-        }
-     },
-     template: `<h2>{{ text }}</h2>
-      <input type="text" v-on:input="input" />
-     `
- })
- app.mount("#app")
+      const app = Vue.createApp({
+        data() {
+          return {
+            text: "666",
+          };
+        },
+        methods: {
+          input(e) {
+            this.text = e.target.value;
+          },
+        },
+        template: `<h2>{{ text }}</h2>
+      <input type="text" 
+      v-on:input="input"  
+      v-bind:value="text"/>
+     `,
+      });
+      app.mount("#app");
     </script>
-</body>
+  </body>
 </html>
