--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
             lastName: "Martinez"
           };
         },
+        watch:{
+            text(value){
+                console.log("watcher", value);
+            }
+        },
         computed:{
             fullName(){
                 return this.firstName + "" + this.lastName;
