--- a/index.html
+++ b/index.html
@@ -15,15 +15,20 @@
           return {
             firstName: "666",
             lastName: "Martinez", 
-            open:false
+            open:false,
+            styles: {
+                backgroundColor: "#e5e5e5"
+            }
           };
         },
         watch:{
             open(value){
                 if (value) {
                     this.text = "abierta";
+                    this.styles.backgroundColor="#b5e7a0";
                 } else {
                     this.text = "cerrada";
+                    this.styles.backgroundColor="red";
                 }
             }
         },
@@ -35,11 +40,42 @@
                 return this.open ? "Cerrar" : "Abrir";
             }
         },
-        template: `<h2>{{ fullName }}</h2>
+        template: `
+        <div class="container" :style="styles" >
+        <h2>{{ fullName }}</h2>
             <button @click="open = !open"> {{ label }} </button>
+            </div>
      `,
       });
       app.mount("#app");
     </script>
+        <style>
+            html, body {
+                height: 100vh;
+                margin: 0;
+                font-family: Arial, Helvetica, sans-serif;
+            }
+            #app, .container {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                width: 100%;
+                height: 100%;
+            }
+            button {
+                margin-top: 24px;
+                border: none;
+                background-color: white;
+                padding: 8px 24px;
+                border-radius: 12px;
+            }
+            .closed {
+                background-color: #eca1a6;
+            }
+            .open {
+                background-color: #b5e7a0;
+            }
+        </style>
   </body>
 </html>
