--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             }
         },
         computed:{
+            styles(){
+                return this.open ? ['open'] :['closed'];
+            },
             fullName(){
                 return this.firstName + "" + this.lastName;
             },
