--- a/index.html
+++ b/index.html
@@ -14,69 +14,79 @@
         data() {
           return {
             firstName: "666",
-            lastName: "Martinez", 
-            open:false,
-
+            lastName: "Martinez",
+            open: false,
+            username: "",
           };
         },
-        watch:{
-            open(value){
-                if (value) {
-                    this.text = "abierta";
-
-                } else {
-                    this.text = "cerrada";
-
-                }
+        watch: {
+          open(value) {
+            if (value) {
+              this.text = "abierta";
+            } else {
+              this.text = "cerrada";
             }
+          },
         },
-        computed:{
-            styles(){
-                return this.open ? ['open'] :['closed'];
-            },
-            fullName(){
-                return this.firstName + "" + this.lastName;
-            },
-            label(){
-                return this.open ? "Cerrar" : "Abrir";
-            }
+        computed: {
+          styles() {
+            return this.open ? ["open"] : ["closed"];
+          },
+          fullName() {
+            return this.firstName + "" + this.lastName;
+          },
+          label() {
+            return this.open ? "Cerrar" : "Abrir";
+          },
         },
         template: `
         <div class="container" :class="{'open' : open, 'closed': !open }" >
         <h2>{{ fullName }}</h2>
-            <button @click="open = !open"> {{ label }} </button>
+             <div v-if="open">
+                <p> Hola, {{ username}} </p>
+            </div>
+            <div v-else>
+                <label> Username </label>
+                <input type="text" v-model="username" />
+            </div>
+            <button @click="open = !open"> 
+                <div v-if="!open">Acceder</div>
+                <div v-else> Salir</div>
+                </button>
             </div>
      `,
       });
       app.mount("#app");
     </script>
-        <style>
-            html, body {
-                height: 100vh;
-                margin: 0;
-                font-family: Arial, Helvetica, sans-serif;
-            }
-            #app, .container {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                flex-direction: column;
-                width: 100%;
-                height: 100%;
-            }
-            button {
-                margin-top: 24px;
-                border: none;
-                background-color: white;
-                padding: 8px 24px;
-                border-radius: 12px;
-            }
-            .closed {
-                background-color: #eca1a6;
-            }
-            .open {
-                background-color: #b5e7a0;
-            }
-        </style>
+    <style>
+      html,
+      body {
+        height: 100vh;
+        margin: 0;
+        font-family: Arial, Helvetica, sans-serif;
+      }
+      #app,
+      .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+      }
+      button {
+        margin-top: 24px;
+        border: none;
+        background-color: white;
+        padding: 8px 24px;
+        border-radius: 12px;
+      }
+      .closed {
+        background-color: #eca1a6;
+      }
+      .open {
+        background-color: #b5e7a0;
+      }
+    </style>
   </body>
 </html>
