--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
               this.text = "abierta";
             } else {
               this.text = "cerrada";
+              this.username = "";
             }
           },
         },
