--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
             lastName: "Martinez",
             open: false,
             username: "",
-            posts :[{
+            posts: [
+              {
                 title: "Titulo 1",
-                description: "lorem ipsum"
-            },{
+                description: "lorem ipsum",
+              },
+              {
                 title: "Titulo 2",
-                description: "lorem ipsum"
-            }
-        ]
-
+                description: "lorem ipsum",
+              },
+            ],
           };
         },
         watch: {
@@ -54,10 +55,15 @@
             <h2>{{ fullName }}</h2>
              <div v-if="open">
                 <p> Hola, {{ username}} </p>
-                <div v-for="(item,i) in posts" :key="i" class="item">
-                    <div class="title" > {{item.title}} </div>
-                    <p> {{item.description}}  </p>
+                <div class="list">
+                    <item
+                    v-for="(item,i) in posts" 
+                    :key="i"
+                    :post="item" 
+                    />               
                 </div>
+      
+
             </div>
             <div v-else>
                 <label> Username </label>
@@ -70,46 +76,57 @@
          </div>
      `,
       });
+      app.component("item", {
+        props: ["post"],
+        template: `
+        <div class="item">
+                    <div class="title" > {{post.title}} </div>
+                    <p> {{post.description}}  </p>
+                </div>
+                `,
+      });
       app.mount("#app");
     </script>
     <style>
-        html, body {
-            height: 100vh;
-            margin: 0;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-        #app, .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            width: 100%;
-            height: 100%;
-        }
-        button {
-            margin-top: 24px;
-            border: none;
-            background-color: white;
-            padding: 8px 24px;
-            border-radius: 12px;
-        }
-        .closed {
-            background-color: #eca1a6;
-        }
-        .open {
-            background-color: #b5e7a0;
-        }
-        .list {
-            display: flex;
-            flex-direction: column;
-        }
-        .item {
-            border: 1px solid black;
-        }
-        .title {
-            font-weight: bold;
-            font-size: 1.2rem;
-        }
+      html,
+      body {
+        height: 100vh;
+        margin: 0;
+        font-family: Arial, Helvetica, sans-serif;
+      }
+      #app,
+      .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+      }
+      button {
+        margin-top: 24px;
+        border: none;
+        background-color: white;
+        padding: 8px 24px;
+        border-radius: 12px;
+      }
+      .closed {
+        background-color: #eca1a6;
+      }
+      .open {
+        background-color: #b5e7a0;
+      }
+      .list {
+        display: flex;
+        flex-direction: column;
+      }
+      .item {
+        border: 1px solid black;
+      }
+      .title {
+        font-weight: bold;
+        font-size: 1.2rem;
+      }
     </style>
   </body>
 </html>
