--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,33 +11,26 @@
     <script src="https://unpkg.com/vue@next"></script>
     <div id="app"></div>
     <script>
-      const app = Vue.createApp({
-        template: `
-        <div> 
-                    <v-layout>
-                        <template v-slot:header>
-                            <button>Titulo</button>
-                        </template>
-                        <template v-slot:content>
-                            Lorem ispum dolor sit amet.
-                        </template>
-                    </v-layout>
-                </div>
-        
-     `});
+        const app = Vue.createApp({
+            data(){
+                return {
+                 items: ["uno", "dos", "tres", ,]
+                };
+            },
+            template:`
+                <ul>
+                    <v-item v-for=" item in items" v-bind:text="item"> </v-item>
+                </ul>
+`
+        });
 
-
-     app.component("v-layout", {
+        app.component("v-item", {
+            props: ["text"],
             template: `
-            <header>
-                <slot name="header"></slot>    
-            </header>
-            <div>
-                <slot name="content"></slot>    
-            </div>
+            <li>{{ text }} </li>
             `
         });
-      app.mount("#app");
+        const vm = app.mount("#app");
     </script>
 </body>
 </html>
