--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
         });
 
         app.component("v-item", {
-            props: ["text"],
+            props: {
+                text: {
+                    default: "Texto vacio"
+                }
+            },
             template: `
             <li>{{ text }} </li>
             `
