--- a/index.html
+++ b/index.html
@@ -14,21 +14,29 @@
         const app = Vue.createApp({
             data(){
                 return {
-                 items: ["uno", "dos", "tres", ,]
+                 items: ["uno", "dos", "tres"]
                 };
+            },
+            methods: {
+                remove(i) {
+                    const items = this.items.filter((el, index) => index !== i);
+                    this.items = items;
+                }
             },
             template:`
                 <ul>
-                    <v-item v-for=" item in items" v-bind:text="item"> </v-item>
+                    <v-item 
+                    v-for=" (item,i) in items" 
+                    v-bind:text="item"
+                    v-on:click="remove(i)"
+                    > </v-item>
                 </ul>
 `
         });
 
         app.component("v-item", {
             props: {
-                text: {
-                    default: "Texto vacio"
-                }
+                text: String
             },
             template: `
             <li>{{ text }} </li>
