--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <v-item 
                     v-for=" (item,i) in items" 
                     v-bind:text="item"
-                    v-on:click="remove(i)"
+                    v-on:remove="remove(i)"
                     > </v-item>
                 </ul>
 `
@@ -38,8 +38,13 @@
             props: {
                 text: String
             },
+            methods:{
+                rm(){
+                    this.$emit("remove")
+                }
+            },
             template: `
-            <li>{{ text }} </li>
+            <li v-on:click="rm">{{ text }} </li>
             `
         });
         const vm = app.mount("#app");
