--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,38 +13,25 @@
         const app = Vue.createApp({
             data(){
                 return {
-                 items: ["uno", "dos", "tres"]
+                    text: "Hola"
                 };
             },
-            methods: {
-                remove(i) {
-                    const items = this.items.filter((el, index) => index !== i);
-                    this.items = items;
-                }
-            },
-            template:`
-                <ul>
-                    <v-item 
-                    v-for=" (item,i) in items" 
-                    v-bind:text="item"
-                    v-on:remove="remove(i)"
-                    > </v-item>
-                </ul>
-`
+             template: `
+             <div>
+                <p> {{ text }} </p>
+                <v-input v-model:value="text" />
+            </div>`
         });
-
-        app.component("v-item", {
-            props: {
-                text: String
+        app.component( "v-input",{
+            prop:{
+                value:String
             },
             methods:{
-                rm(){
-                    this.$emit("remove")
+                input(e){
+                    this.$emit("update:value", e.target.value );
                 }
             },
-            template: `
-            <li v-on:click="rm">{{ text }} </li>
-            `
+            template:`<input type="text"  v-bind:value="value" v-on:input="input"/> `
         });
         const vm = app.mount("#app");
     </script>
