--- a/inde-anterior.html
+++ b/inde-anterior.html
@@ -16,24 +16,22 @@
                     text: "Hola"
                 };
             },
-            provide(){
-                return {
-                    otroTexto: this.text
-                };
-            
-            },
              template: `
              <div>
                 <p> {{ text }} </p>
-                <otro  />
+                <v-input v-model:value="text" />
             </div>`
         });
-        app.component( "otro",{
-            template:`<tercer/> `
-        });
-        app.component( "tercer",{
-            inject:["otroTexto"],
-            template:`<div>{{ otroTexto }}</div/> `
+        app.component( "v-input",{
+            prop:{
+                value:String
+            },
+            methods:{
+                input(e){
+                    this.$emit("update:value", e.target.value );
+                }
+            },
+            template:`<input type="text"  v-bind:value="value" v-on:input="input"/> `
         });
         const vm = app.mount("#app");
     </script>
